update config and world list.

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -2,39 +2,34 @@
 # built this stage.
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
-
-# resolve-march-native
 COMMON_FLAGS="-march=znver3 -mshstk --param=l1-cache-line-size=64 --param=l1-cache-size=32 --param=l2-cache-size=512 -O2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
 CHOST="x86_64-pc-linux-gnu"
-# cpuid2cpuflags
 CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3"
-# Use -j12 to left some CPU for other activities
-MAKEOPTS="-j12"
+MAKEOPTS="-j16"
 
-# NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
 
-# Use zstd as default compress algorithm
-PORTAGE_COMPRESS="zstd"
-BINPKG_COMPRESS="zstd"
+# NOTE: This stage was built with the bindist Use flag enabled
 
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
 EMERGE_DEFAULT_OPTS="--keep-going --with-bdeps=y --quiet --ask --verbose"
 AUTO_CLEAN="yes"
+PORTAGE_COMPRESS="zstd"
+BINPKG_COMPRESS="zstd"
 
-# ccache for gcc
+# ccache
 FEATURES="parallel-fetch ccache"
 CCACHE_DIR="/var/cache/ccache"
 
-# sccache for rust
+# sccache
 RUSTC_WRAPPER="/usr/bin/sccache"
 SCCACHE_DIR="/var/cache/sccache"
 SCCACHE_MAX_FRAME_LENGTH=104857600
@@ -46,18 +41,17 @@ L10N="en-US zh-CN en zh"
 
 # USE
 SW="sudo client git udev efi hwdb openmp minizip ccache dbus acpi smack policykit udisks"
-# Use gnome on wayland
-DE="gnome wayland X notify -kde"
-NET="network networkmanager wifi http2 connection-sharing iptables network-sandbox"
+KDE="-gnome kde wayland X notify gles2 egl gtk qt5 introspection vala"
+GNOME="gnome -kde wayland X notify gles2 gtk qt5 introspection vala"
+NET="network networkmanager wifi http2 connection-sharing nftables network-sandbox"
 AUDIO="alsa jack pulseaudio"
-VIDEO="vulkan"
-ELSE="cjk emoji"
+VIDEO="vulkan opencl opengl amdgpu radeonsi -nvidia -intel"
 KER="compress-zstd initramfs zstd"
+ELSE="cjk emoji"
+COMPILE="clang"
 
-USE="${SW} ${DE} ${NET} ${AUDIO} ${VIDEO} ${ELSE} ${KER}"
+USE="${SW} ${GNOME} ${NET} ${AUDIO} ${VIDEO} ${KER} ${ELSE} ${COMPILE}"
 
-# Use bfsu mirrors
 GENTOO_MIRRORS="https://mirrors.bfsu.edu.cn/gentoo"
 
-# Set proxy
 HTTP_PROXY="http://127.0.0.1:7890"
